[gd_scene load_steps=11 format=3 uid="uid://c3ftv6p6r1071"]

[ext_resource type="Theme" uid="uid://5os27plblg4t" path="res://resources/theme.tres" id="1_8bulm"]
[ext_resource type="Script" uid="uid://dt80n4vowgof1" path="res://scripts/ui/gui_root.gd" id="1_uktbi"]
[ext_resource type="PackedScene" uid="uid://carqx0up3l7mp" path="res://scenes/ui/tower_category.tscn" id="2_astdl"]
[ext_resource type="PackedScene" uid="uid://uiq1di43dds1" path="res://scenes/ui/tower_button.tscn" id="2_k2ell"]
[ext_resource type="StyleBox" uid="uid://baihiuteq2brc" path="res://resources/panel_bg_outline.tres" id="3_lagvo"]
[ext_resource type="PackedScene" uid="uid://cuhjbhic51lxy" path="res://scenes/ui/resource_display.tscn" id="3_mcgig"]
[ext_resource type="PackedScene" uid="uid://l6rhoi3yb5xc" path="res://scenes/towers/crossbow/crossbow.tscn" id="4_00jwl"]
[ext_resource type="Texture2D" uid="uid://t57xpvt76yec" path="res://assets/ui/crystal.svg" id="4_j5hfe"]
[ext_resource type="Script" uid="uid://dhf6s7lrolgof" path="res://scripts/ui/closable_menu.gd" id="6_py6rl"]
[ext_resource type="PackedScene" uid="uid://c4tpi83r71ldm" path="res://scenes/ui/upgrade_menu.tscn" id="9_j5hfe"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8bulm")
script = ExtResource("1_uktbi")

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -2048.0
offset_top = 32.0
offset_right = 2048.0
offset_bottom = 113.0
grow_horizontal = 2
theme_override_constants/separation = 16
alignment = 1

[node name="StartButton" type="Button" parent="TopBar" groups=["start_wave_button"]]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
theme = ExtResource("1_8bulm")
text = "Start"

[node name="LivesDisplay" parent="TopBar" instance=ExtResource("3_mcgig")]
layout_mode = 2

[node name="MoneyDisplay" parent="TopBar" instance=ExtResource("3_mcgig")]
layout_mode = 2

[node name="TextureRect" parent="TopBar/MoneyDisplay/MarginContainer/HBoxContainer" index="0"]
texture = ExtResource("4_j5hfe")

[node name="TowerMenu" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1216.0
offset_top = -480.0
offset_right = 1216.0
offset_bottom = -155.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_8bulm")
theme_override_styles/panel = ExtResource("3_lagvo")
tab_alignment = 1
current_tab = 0
tab_focus_mode = 1
script = ExtResource("6_py6rl")
metadata/_edit_use_anchors_ = true

[node name="Offense" parent="TowerMenu" instance=ExtResource("2_astdl")]
layout_mode = 2
theme = ExtResource("1_8bulm")
metadata/_tab_index = 0

[node name="Buttons" parent="TowerMenu/Offense" index="0"]
size_flags_horizontal = 0

[node name="TowerSelector_Offense_Padding_Buttons#Crossbow" parent="TowerMenu/Offense/Buttons" index="0" instance=ExtResource("2_k2ell")]
layout_mode = 2
tower_scene = ExtResource("4_00jwl")

[node name="Production" parent="TowerMenu" instance=ExtResource("2_astdl")]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="TowerMenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -96.0
offset_right = 128.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_8bulm")
text = "Towers"

[node name="UpgradeMenu" parent="." instance=ExtResource("9_j5hfe")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -384.0
offset_right = 768.0
offset_bottom = 384.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="TowerMenuButton" to="." method="_on_tower_menu_button_pressed"]

[editable path="TopBar/LivesDisplay"]
[editable path="TopBar/MoneyDisplay"]
[editable path="TowerMenu/Offense"]
[editable path="TowerMenu/Production"]
